@@ -89,6 +89,8 @@ private:
 
 	// Keeps track of entities already hit
 	std::vector<Entity*> entitiesCollided;
+
+	bool first_frame;
 };
 
 #endif
